# toy_renderer

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
src/: main.cpp  model.h  our_gl.cpp  our_gl.h  tgaimage.cpp  tgaimage.h  types.h  util.h
